[package]
name = "vello-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
vello_encoding = { git = "https://github.com/linebender/vello", rev = "ea224b459c48267e0e63747c9b192d62ef432ac9" }
peniko = { git = "https://github.com/linebender/peniko", rev = "cafdac9a211a0fb2fec5656bd663d1ac770bcc81" }
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3.63", features = ['console'] }
js-sys = "0.3.64"
serde_json = "1.0"
bytemuck = { version = "1.12.1", features = ["derive"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = "s"
